[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-chunkize"
version = "1.0.1"
description = "Chunk pregeneration for Endstone servers"
authors = [{ name = "ozz" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["endstone>=0.11"]
keywords = ["endstone", "minecraft", "bedrock", "pregeneration", "chunks"]

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chunkize"]

[project.entry-points."endstone"]
chunkize = "endstone_chunkize:ChunkizePlugin"
